[gd_scene load_steps=11 format=2]

[ext_resource path="res://Entities/NPC/NPC.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/NPC/6am/6am.png" type="Texture" id=2]
[ext_resource path="res://Entities/NPC/6am/6amDialog.tres" type="Resource" id=3]
[ext_resource path="res://Entities/NPC/6am/6AM.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 4.5 )

[sub_resource type="CircleShape2D" id=5]
radius = 29.1548

[sub_resource type="Animation" id=3]
resource_name = "Default"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleHelper:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Jump"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleHelper/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Walk"
length = 0.35
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 0.435275, 2.21914 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 0, -10 ), Vector2( 0, -17 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScaleHelper:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 0.9 ), Vector2( 0.95, 1.05 ) ]
}

[node name="6AM" instance=ExtResource( 1 )]
script = ExtResource( 4 )
wanderRange = 64

[node name="Sprite" parent="ScaleHelper" index="0"]
position = Vector2( 0, -10 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2
frame = 0

[node name="CollisionShape2D" parent="." index="1"]
visible = false
position = Vector2( 0, -4.5 )
shape = SubResource( 4 )

[node name="Iteraction" parent="." index="2"]
visible = false
position = Vector2( 0, -34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Iteraction" index="1"]
position = Vector2( 0, 28 )
shape = SubResource( 5 )

[node name="AnimationPlayer" parent="." index="3"]
anims/Default = SubResource( 3 )
anims/Jump = SubResource( 6 )
anims/RESET = SubResource( 2 )
anims/Walk = SubResource( 1 )

[node name="Dialog" parent="." index="4"]
position = Vector2( 0, -34 )

[node name="Dialog" parent="Dialog" index="0"]
dialog = ExtResource( 3 )

[node name="OpenChestJump" type="Timer" parent="." index="6"]
wait_time = 0.75
one_shot = true

[node name="OpenChest" type="Timer" parent="." index="7"]
one_shot = true

[connection signal="timeout" from="OpenChest" to="." method="_on_open_chest_timeout"]
